--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Google Service
+ios/GoogleService-Info.plist
+android/app/google-services.json
