--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
+    "app": "react-native start",
+    "app:asset": "react-native-asset",
+    "lint": "biome check --write --no-errors-on-unmatched --diagnostic-level=error --files-ignore-unknown=true .",
+    "ios:pod": "cd ios && pod install && cd ..",
+    "script:watchman": "watchman watch-del './' ; watchman watch-project './'"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -17,17 +17,14 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@biomejs/biome": "^1.8.3",
     "@react-native/babel-preset": "0.74.85",
-    "@react-native/eslint-config": "0.74.85",
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "react-native-asset": "^2.1.1",
     "typescript": "5.0.4"
   },
   "engines": {
