--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "script:watchman": "watchman watch-del './' ; watchman watch-project './'"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.3",
+    "@react-navigation/bottom-tabs": "^7.0.0-rc.23",
+    "@react-navigation/native": "^7.0.0-rc.14",
+    "@react-navigation/native-stack": "^7.0.0-rc.18",
+    "@react-navigation/stack": "^7.0.0-rc.18",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-haptic-feedback": "^2.2.0",
+    "react-native-reanimated": "^3.14.0",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
+    "react-native-svg": "^15.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
