--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.3",
+    "@invertase/react-native-apple-authentication": "^2.3.0",
     "@react-navigation/bottom-tabs": "^7.0.0-rc.23",
     "@react-navigation/native": "^7.0.0-rc.14",
     "@react-navigation/native-stack": "^7.0.0-rc.18",
