--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native": "0.74.3",
     "react-native-bootsplash": "^6.1.1",
     "react-native-date-picker": "^5.0.4",
+    "react-native-device-info": "^11.1.0",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-linear-gradient": "^2.8.3",
