--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^15.4.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-webview": "^13.10.5",
     "reanimated-color-picker": "^3.0.4",
     "recoil": "^0.7.7"
   },
