--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@gorhom/bottom-sheet": "^4.6.3",
     "@invertase/react-native-apple-authentication": "^2.3.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^7.0.0-rc.23",
