--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,6 @@ yarn-error.log
 # Google Service
 ios/GoogleService-Info.plist
 android/app/google-services.json
+
+.codepush/*
+!.codepush/.placeholder
