--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "prettier --check . && eslint .",
     "lint:fix": "prettier --write . && eslint . --fix",
     "ios:pod": "cd ios && pod install && cd ..",
+    "android:bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output ./.codepush/index.android.bundle --assets-dest ./.codepush",
+    "android:codepush": "code-push release DISTIMER-Android ./.codepush/index.android.bundle -d Production",
+    "ios:bundle": "react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ./.codepush/main.jsbundle --assets-dest ./.codepush",
+    "ios:codepush": "code-push release DISTIMER-iOS ./.codepush/main.jsbundle -d Production",
     "script:oss": "react-native-oss-license --json --only-direct-dependency --skip-not-required > license.json",
     "script:watchman": "watchman watch-del './' ; watchman watch-project './'",
     "script:orval": "orval --config ./orval.config.js",
@@ -33,6 +37,7 @@
     "react": "18.3.1",
     "react-native": "0.75.1",
     "react-native-bootsplash": "^6.1.1",
+    "react-native-code-push": "^8.3.1",
     "react-native-date-picker": "^5.0.4",
     "react-native-device-info": "^11.1.0",
     "react-native-gesture-handler": "^2.18.1",
