--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,5 +2,6 @@ pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin") }
 plugins { id("com.facebook.react.settings") }
 extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
 rootProject.name = 'com.distimer.app'
-include ':app'
+include ':app', ':react-native-code-push'
 includeBuild('../node_modules/@react-native/gradle-plugin')
+project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
