--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "lint": "prettier --check . && eslint .",
     "lint:fix": "prettier --write . && eslint . --fix",
     "ios:pod": "cd ios && pod install && cd ..",
-    "android:bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output ./.codepush/index.android.bundle --assets-dest ./.codepush",
-    "android:codepush": "code-push release DISTIMER-Android ./.codepush/index.android.bundle -d Production",
-    "ios:bundle": "react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ./.codepush/main.jsbundle --assets-dest ./.codepush",
-    "ios:codepush": "code-push release DISTIMER-iOS ./.codepush/main.jsbundle -d Production",
+    "android:bundle": "rm -rf ./.codepush/android && mkdir ./.codepush/android && react-native bundle --platform android --dev false --entry-file index.js --bundle-output ./.codepush/android/index.android.bundle --assets-dest ./.codepush/android",
+    "android:codepush": "code-push release DISTIMER-Android ./.codepush/android -d Production",
+    "ios:bundle": "rm -rf ./.codepush/ios && mkdir ./.codepush/ios && react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ./.codepush/ios/main.jsbundle --assets-dest ./.codepush/ios",
+    "ios:codepush": "code-push release DISTIMER-iOS ./.codepush/ios -d Production",
     "script:oss": "react-native-oss-license --json --only-direct-dependency --skip-not-required > license.json",
     "script:watchman": "watchman watch-del './' ; watchman watch-project './'",
     "script:orval": "orval --config ./orval.config.js",
