--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "moment": "^2.30.1",
     "phosphor-react-native": "^2.0.0",
     "react": "18.3.1",
-    "react-native": "0.75.1",
+    "react-native": "0.75.2",
     "react-native-bootsplash": "^6.1.1",
     "react-native-code-push": "^8.3.1",
     "react-native-date-picker": "^5.0.4",
@@ -58,10 +58,10 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@faker-js/faker": "^8.4.1",
-    "@react-native/babel-preset": "0.75.1",
-    "@react-native/eslint-config": "0.75.1",
-    "@react-native/metro-config": "0.75.1",
-    "@react-native/typescript-config": "0.75.1",
+    "@react-native/babel-preset": "0.75.2",
+    "@react-native/eslint-config": "0.75.2",
+    "@react-native/metro-config": "0.75.2",
+    "@react-native/typescript-config": "0.75.2",
     "@tanstack/eslint-plugin-query": "^5.51.15",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
@@ -79,6 +79,7 @@
     "msw": "^2.3.4",
     "prettier": "^3.3.3",
     "react-native-asset": "^2.1.1",
+    "react-native-onesignal": "^5.2.3",
     "react-native-oss-license": "^0.7.0",
     "react-native-svg-transformer": "^1.5.0",
     "typescript": "5.0.4"
