--- a/ios/distimer/Info.plist
+++ b/ios/distimer/Info.plist
@@ -35,6 +35,10 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>CodePushDeploymentKey</key>
+	<string>vIfwwnZ228xgAsaq4DcoombA41Il4ksvOXqog</string>
+	<key>CodePushServerURL</key>
+	<string>https://codepush.2w.vc/</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
@@ -58,6 +62,10 @@
 		<string>WantedSans-Regular.ttf</string>
 		<string>WantedSans-SemiBold.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>BootSplash</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -78,9 +86,7 @@
 	<string>Automatic</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-    <key>CodePushDeploymentKey</key>
-    <string>vIfwwnZ228xgAsaq4DcoombA41Il4ksvOXqog</string>
-    <key>CodePushServerURL</key>
-    <string>https://codepush.2w.vc/</string>
+	<key>NSSupportsLiveActivities</key>
+	<true/>
 </dict>
 </plist>
