--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,3 +38,7 @@ target 'distimer' do
     )
   end
 end
+
+target 'OneSignalNotificationServiceExtension' do
+  pod 'OneSignalXCFramework', '>= 5.0.0', '< 6.0'
+end
