✨ Add android native timer notification module

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -97,7 +97,7 @@ android {
             keyPassword 'android'
         }
         release {
-            storeFile file(properties.getProperty("STORE_FILE"))
+                storeFile file(properties.getProperty("STORE_FILE"))
             storePassword properties.getProperty("STORE_PASSWORD")
             keyAlias properties.getProperty("KEY_ALIAS")
             keyPassword properties.getProperty("KEY_PASSWORD")
@@ -118,6 +118,7 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation project(':react-native-code-push')
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
