feat: ios onesignal init

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -37,4 +37,12 @@ target 'distimer' do
       # :ccache_enabled => true
     )
   end
+
+  pod 'OneSignal/OneSignal', '>= 5.0.0', '< 6.0'
+  pod 'OneSignal/OneSignalInAppMessages', '>= 5.0.0', '< 6.0'
+end
+
+target 'OneSignalNotificationServiceExtension' do
+  pod 'OneSignal/OneSignal', '>= 5.0.0', '< 6.0'
+  pod 'OneSignal/OneSignalInAppMessages', '>= 5.0.0', '< 6.0'
 end
