--- a/ios/Podfile
+++ b/ios/Podfile
@@ -46,3 +46,8 @@ target 'OneSignalNotificationServiceExtension' do
   pod 'OneSignal/OneSignal', '>= 5.0.0', '< 6.0'
   pod 'OneSignal/OneSignalInAppMessages', '>= 5.0.0', '< 6.0'
 end
+
+target 'LiveActivityExtension' do
+  pod 'OneSignal/OneSignal', '>= 5.0.0', '< 6.0'
+  pod 'OneSignal/OneSignalInAppMessages', '>= 5.0.0', '< 6.0'
+end
