--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -28,7 +28,13 @@
         <service
             android:name=".TimerNotificationService"
             android:foregroundServiceType="specialUse" />
-        <meta-data android:name="com.onesignal.NotificationServiceExtension"
-            android:value="com.distimer.app.NotificationServiceExtension" />
+        <service android:name=".DistimerMessagingService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
+
     </application>
 </manifest>
